Fixed memory items' message overflowing. Now the message will be trimmed with 3 dots at the end for large messages.

--- a/frontend/src/assets/styles/cmps/content/memories-content/_MemoryItem.scss
+++ b/frontend/src/assets/styles/cmps/content/memories-content/_MemoryItem.scss
@@ -34,9 +34,15 @@
 
   &__message {
     margin: 0;
-    margin-top: 1rem;
+    margin-block: 1rem;
     height: 200px;
     font-size: 14px;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+    line-clamp: 8;
+    -webkit-box-orient: vertical;
   }
 }
 
